HowItWorks Section added

--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -1,5 +1,5 @@
 .heroSection {
-    background-image: url("../../public/layered-waves.svg");
+    background-image: url("../../../public/layered-waves.svg");
     background-size: cover;
     background-position: bottom center;
     background-repeat: no-repeat;
