--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.swiper-pagination-bullet-active {
+  width: 30px;
+  border-radius: 5px;
+}
+
+.swiper {
+  padding: 80px 0px;
+  @media only screen and (max-width: 768px) {
+    padding: unset;
+  }
+}
